--- a/app/components/header.html
+++ b/app/components/header.html
@@ -35,17 +35,30 @@
                             <ul class="unit-list">
                                 <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>基金績效搜尋</span></a></li> 
                                 <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>基金進階搜尋</span></a></li> 
+                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>最新配息查詢</span></a></li>
                             </ul>
                         </div>
                         <div class="unit-content">
-                            <ul class="unit-list">
-                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>最新配息查詢</span></a></li> 
-                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>基金公司查詢</span></a></li> 
+                            <ul class="unit-list"> 
+                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>基金公司查詢</span></a></li>
+                                <div class="unit-box">
+                                    <ul class="unit-box-list">
+                                        <li class="unit-box-item"><a href="javascript:;"><i class="common-icon menu-sm"></i>海外發行公司列表</a></li>
+                                        <li class="unit-box-item"><a href="javascript:;"><i class="common-icon menu-sm"></i>國內基金公司列表</a></li>
+                                    </ul>
+                                </div>
                             </ul>
                         </div>
                         <div class="unit-content">
                             <ul class="unit-list">
                                 <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>樂知基金學堂</span></a></li>
+                                <div class="unit-box">
+                                    <ul class="unit-box-list">
+                                        <li class="unit-box-item"><a href="javascript:;"><i class="common-icon menu-sm"></i>基金入門</a></li>
+                                        <li class="unit-box-item"><a href="javascript:;"><i class="common-icon menu-sm"></i>基金進階</a></li>
+                                        <li class="unit-box-item"><a href="javascript:;"><i class="common-icon menu-sm"></i>基金實務</a></li>
+                                    </ul>
+                                </div>
                             </ul>
                         </div>
                     </div>
@@ -149,12 +162,43 @@
                                 <li class="menu-item">
                                     <div class="menu-title">
                                         <a class="menu-link" href="javascript:;">基金公司查詢</a>
+                                        <i class="fal fa-angle-down menu-toggle toggle-md"></i>
                                     </div>
+                                    <ul class="menu-expand menu-sm">
+                                        <li class="menu-item">
+                                            <div class="menu-title">
+                                                <a class="menu-link" href="javascript:;">海外發行公司列表</a>
+                                            </div>
+                                        </li>
+                                        <li class="menu-item">
+                                            <div class="menu-title">
+                                                <a class="menu-link" href="javascript:;">國內基金公司列表</a>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li class="menu-item">
                                     <div class="menu-title">
                                         <a class="menu-link" href="javascript:;">樂知基金學堂</a>
+                                        <i class="fal fa-angle-down menu-toggle toggle-md"></i>
                                     </div>
+                                    <ul class="menu-expand menu-sm">
+                                        <li class="menu-item">
+                                            <div class="menu-title">
+                                                <a class="menu-link" href="javascript:;">基金入門</a>
+                                            </div>
+                                        </li>
+                                        <li class="menu-item">
+                                            <div class="menu-title">
+                                                <a class="menu-link" href="javascript:;">基金進階</a>
+                                            </div>
+                                        </li>
+                                        <li class="menu-item">
+                                            <div class="menu-title">
+                                                <a class="menu-link" href="javascript:;">基金實務</a>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </li>
