--- a/app/styles/_icon.scss
+++ b/app/styles/_icon.scss
@@ -93,7 +93,7 @@
     background-position: center;
     background-size: contain;
     width: 30px;
-    display: block;
+    display: inline-block;
     &.icon-lg{
         width: 38px;
     }
